--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -117,10 +117,10 @@
         <div class="span5">
             <h4>{% trans "How to add new posts" %}</h4>
             <ul class="instructions">
-                <li><strong>{% trans "Title" %}</strong>: {% trans "An spectacular title! (100 characters)" %}</li>
-                <li><strong>{% trans "Text" %}</strong>: {% trans "Your story." %}</li>
-                <li><strong>{% trans "Tags" %}</strong>: {% trans "Please use them carefully, you are limited to 4 tags." %}</li>
-                <li><strong>{% trans "Publish in index" %}</strong>: {% trans "If you mark this, the post will appear in the spaces index page AND in the main index." %}</li>
+                <li><strong>{% trans "Title:" %}</strong> {% trans "An spectacular title! (100 characters)" %}</li>
+                <li><strong>{% trans "Text:" %}</strong> {% trans "Your story." %}</li>
+                <li><strong>{% trans "Tags:" %}</strong> {% trans "Please use them carefully, you are limited to 4 tags." %}</li>
+                <li><strong>{% trans "Publish in index:" %}</strong> {% trans "If you mark this, the post will appear in the spaces index page AND in the main index." %}</li>
             </ul>
         </div>
     </div>
