--- a/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
@@ -15,7 +15,7 @@
         <div class="span16">
             <form action="" method="post">{% csrf_token %}
                 <h4>{% trans "Delete space" %}</h4>
-                <p>{% trans "Are you sure you want to delete this space? This action cannot be undone." %}</p>
+                <p>{% trans "Are you sure you want to delete this space? This action cannot be undone" %}.</p>
 
                 <hr />
                 <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
