--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -38,8 +38,46 @@ hr { /* This hr replaces the bootstrap one */
 /* END COMMON CUSTOMIZATIONS */
 
 /* SPACE INDEX */
+.posttitle {
+    border-bottom: 1px solid #DDD;
+    font-weight:normal;
+}
+
+.postinfo {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #DDD;
+    background: #EEE;
+}
 /* END SPACE INDEX */
 
+/* NEWS LIST/ARCHIVE */
+.listitem {
+    width: 100%;
+    color: #000;
+    margin: 20px 0 20px 0;
+}
+
+.listmonth {
+    font-size: 2em;
+    text-transform: uppercase;
+}
+
+.listdate {
+    font-size: 1.5em;
+    color: #000;
+    float: left;
+    padding: 10px;
+    border-right: 1px solid #DDD;
+    margin-right: 10px;
+}
+
+.listtitle {
+    font-size: 1.5em;
+    color: #000;
+    padding: 10px;
+}
+/* END NEWS LIST/ARCHIVE */
 
 
 
@@ -800,27 +838,6 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 
 .post img {
     margin: 10px;
-}
-
-/* POST LIST */
-.listitem {
-    width: 100%;
-    color: #000;
-    border: 0;
-    margin: 30px 0 30px 0;
-}
-.postdate {
-    font-size: 1.5em;
-    color: #000;
-    float:left;
-    padding: 10px;
-    border-right: 1px dashed #000;
-}
-
-.posttitle {
-    font-size: 2em;
-    color: #000;
-    padding: 9px 10px 10px 110px;
 }
 
 
