--- a/src/e_cidadania/templates/500.html
+++ b/src/e_cidadania/templates/500.html
@@ -1,49 +1,14 @@
+{% extends "base.html" %}
 {% load i18n %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
-	<head>
-		<title>{% block title %}500 - Server error{% endblock %}</title>
-		<link rel="shortcut icon" href="/{{ STATIC_URL }}/assets/favicon.ico" type="image/ico"/>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<meta name="Description" content="Site description"/>
-		<meta name="Robots" content="all"/>
-		
-		<style type="text/css">
-		  body {
-		    background: #FFF;
-		    font-family: arial;
-		    color: #5d5d5d;
-		  }
-		  
-		  a {
-		    color: #5d5d5d;
-		    text-decoration: none;
-		  }
-		  
-		  a:visited {
-		    color: #333;
-		  }
-		  
-		  #message {
-		    height: 400px;
-		    width: 700px;
-		    position: absolute;
-		    top: 50%;
-		    left: 50%;
-		    margin-left: -350px;
-		    margin-top: -200px;
-		    background: #000;
-		    font-size: 20px;
-		  }
-		  
-		</style>
-	</head>
-	<body>
-	    <div id="message">
-	        <img src="{{ STATIC_URL }}/500.png" style="float:left;"/>
-	        <h3>{% trans "Ooops!" %}</h3>
-	        <p>{% trans "The server had an unexpected error." %}</p>
-	        <p>{% trans "Please go back to the" %} <a href="/">{% trans "home page" %}</a> {% trans "while we call the spaguetti squad to repair this." %}</p>
-	    </div>
-  </body>
-</html>
+
+{% block title %}500 - Server error{% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="span16">
+            <h1 style="font-size:12em;text-align:center;">500<h1>
+            <h4>{% trans "This wasn't supposed to happen! What did you do!?" %}</h4>
+            <h4>{% trans "We will send the spaguetti squad to repair this. Meanwhile you can go back to the index."%}</h4>
+        </div>
+    </div>
+{% endblock %}
