--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -20,8 +20,8 @@
     
     <div class="row">
         <div class="span8">
-            <p><strong>{% trans "Description" %}</strong>: {{ debate.description }}</p>
-            <p><strong>{% trans "Scope" %}:</strong> {{ debate.scope }}</p>
+            <p><strong>{% trans "Description:" %}</strong> {{ debate.description }}</p>
+            <p><strong>{% trans "Scope:" %}</strong> {{ debate.scope }}</p>
         </div>
         <div class="span8">
             This space is meant for the start and end fields
