--- a/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
@@ -72,8 +72,8 @@
             <div id="widget">
                 <h2>{% trans "What can I upload?"%}</h2>
                 <ul class="instructions">
-                    <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "Mainly all non executable documents (PDF, ODT, DOC). Audio and video are not allowed."%}</li>
-                    <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 10MB"%}</li>
+                    <li><strong>{% trans "Allowed formats" %}:</strong> {% trans "PDF, ODT, DOC, TXT, RTF, etc. Audio and video are not allowed."%}</li>
+                    <li><strong>{% trans "Maximum size" %}:</strong> {% trans "Allowed size is 25MB"%}</li>
                 </ul>
             </div>
         </div>
