--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -61,7 +61,7 @@
  
     <div class="row">
         <div class="span-one-third">
-            <h3>{% trans "Recent news" %}</h3>
+            <h3>{% trans "Recent news" %} <a href="/rss/"><img src="{{ STATIC_URL }}/assets/icons/rss16.png" alt="Feed RSS"/></a></h3>
             <ul class="unstyled">
                 {% for post in publication %}
                     <li><a href="{{ post.get_absolute_url }}">{{ post.post_title }}</a></li>
@@ -80,18 +80,21 @@
         </div>
     </div>
 
+    <hr />
     
-<!--    <div class="grid_16">-->
-<!--        <div class="bigbutton black count"><strong>13.512</strong> debates en <strong>7.645</strong> procesos participativos</div>-->
-<!--    </div>-->
+    <div class="row">
+        <div class="span16">
+            <strong>13.512</strong> debates en <strong>7.645</strong> procesos participativos
+        </div>
+    </div>
+
+    <hr />
     
-
-    <!--<div class="grid_4">
-
-        <!--<div id="widgetindex">
-            <h2>{% trans "Share" %}</h2><br />            
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Share" %}</h4>
             <!-- Facebook -->
-           <!--<div id="fb-root"></div>
+            <div id="fb-root"></div>
             <script>(function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) {return;}
@@ -104,7 +107,7 @@
             <!-- End Facebook -->                
             
             <!-- Google Plus -->
-            <!--<g:plusone size="tall" href="http://ecidadania.org"></g:plusone>
+            <g:plusone size="tall" href="http://ecidadania.org"></g:plusone>
             <script type="text/javascript">
                 window.___gcfg = {lang: 'es'};
                 (function() {
@@ -116,29 +119,27 @@
             <!-- End Google Plus -->
                 
             <!-- LinkedIn -->
-            <!--<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
+            <script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
             <script type="IN/Share" data-url="http://ecidadania.org" data-counter="top"></script>
             <!-- End LinkedIn -->
                 
             <!-- Identi.ca -->
-            <!--<div id="identishare" style="vertical-align: bottom;"></div>
+            <div id="identishare" style="vertical-align: bottom;"></div>
             <script type="text/javascript" src="http://www.tildehash.com/identishare.php?style2&title='e-cidadania open source e-democracy platform'" defer="defer"></script>
             <!-- End Identi.ca -->
 
             <!-- Twitter -->
-            <!--<a href="https://twitter.com/ecidadaniafloss" class="twitter-share-button" date-url="http://ecidadania.org" data-counturl="http://ecidadania.org" data-count="vertical" data-lang="es">{% trans "Tweet" %}</a>
-            <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script><br /><br />
+            <a href="https://twitter.com/ecidadaniafloss" class="twitter-share-button" date-url="http://ecidadania.org" data-counturl="http://ecidadania.org" data-count="vertical" data-lang="es">{% trans "Tweet" %}</a>
+            <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
             <!-- End Twitter -->
                 
             <!-- Tuenti -->
-            <!--<script type="text/javascript" src="http://widgets.tuenti.com/widgets.js"></script>
-            <a href="http://www.tuenti.com/share" class="tuenti-share-button" icon-style="light" share-url="http://ecidadania.org"></a><br /><br />
+            <script type="text/javascript" src="http://widgets.tuenti.com/widgets.js"></script>
+            <a href="http://www.tuenti.com/share" class="tuenti-share-button" icon-style="light" share-url="http://ecidadania.org"></a>
             <!-- End Tuenti -->
-
-            <!--<a href="/rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/></a>
-            <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
         </div>
-    </div>-->
+    </div>
+    
 {% endblock %}
 
 {% block footer %}
