--- a/src/e_cidadania/templates/not_allowed.html
+++ b/src/e_cidadania/templates/not_allowed.html
@@ -5,10 +5,10 @@
     
 {% block content %}
 
-	<div id="grid_16">
-		{% trans "You are not allowed to access here." %}<br/><br/><br/>
-		<div>
-		    {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="/accounts/"><u>{% trans "back to your profile" %}</u></a>
-	  </div>
-	</div>
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "You are not allowed to access here." %}</h4>
+            <p>{% trans "You can go <a href='/'>back to home</a> or <a href='/accounts/'>back to your profile</a>" %}</p>
+        </div>
+    </div>
 {% endblock %}
