Deleted old news archive template and updated the brand detection in the news module archive template

--- a/src/e_cidadania/apps/news/templates/news/news_list.html
+++ b/src/e_cidadania/apps/news/templates/news/news_list.html
@@ -18,11 +18,13 @@
     {% endif %}
 {% endblock %}
 
-{% if get_place %}
-    {% block space %}
+{% block space %}
+    {% if get_place %}
         <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
-    {% endblock %}
-{% endif %}
+    {% else %}
+        <a class="brand" href="{% url 'site-index' %}">e-cidadania</a>
+    {% endif %}
+{% endblock %}
 
 {% block content %}
 
