--- a/src/e_cidadania/templates/comments/list.html
+++ b/src/e_cidadania/templates/comments/list.html
@@ -1,16 +1,13 @@
 {% load i18n %}
-<div id="comments">
-  <div id="ctitle">{% trans "Comments" %}</div>
-  
-  {% for comment in comment_list %}
-  <div id="comment">
-    <div id="c{{ comment.id }}" class="comment_data">
-        <strong>#{{ comment.id }}</strong> {{ comment.submit_date|date:"F j, Y G:i"|capfirst }} - <a href="/accounts/{{ comment.name }}">{{ comment.name }}</a> {% trans "said" %}:
+
+<h4>{% trans "Comments" %}</h4>
+{% for comment in comment_list %}
+    <div class="comment">
+        <div id="c{{ comment.id }}" class="comment_data">
+            {{ comment.submit_date|date:"F j, Y G:i"|capfirst }} - <a href="/accounts/{{ comment.name }}">{{ comment.name }}</a> {% trans "said" %}:
+        </div>
+        <div class="comment_text">
+            <p>{{ comment.comment }}</p>
+        </div>
     </div>
-    <div class="comment_text">
-        <p>{{ comment.comment }}</p>
-    </div>
-  </div>
-  {% endfor %}
-  
-</div>
+{% endfor %}
